--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "sass ./sass/main.scss ./css/style.css --watch"
+    "sass": "sass ./sass/main.scss:./css/style.css --watch"
   },
   "repository": {
     "type": "git",
